Add CSS elements to blog

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Bens blog</title>
     <meta charset="UTF-8">
-    <link href="your-stylesheet-link-here.css" rel="stylesheet" type="text/css">
+    <link href="~/workspace/ben-southpaw.github.io/styles/main.css" rel="stylesheet" type="text/css">
   </head>
   
   <body>
-    <h1> (PAGE heading)</h1>
-    <h2> <em>A</em> (Optional SUB title) </h2>
+    <h1> Bens Blog</h1>
+    <h2> <em>A</em> Sprint 1</h2>
     <h3></h3>
     
     <p>
