Link index to blog posts

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2> <em>A</em> Sprint 1</h2>
     <h3></h3>
     
-    <a href="ben-southpaw.github.io/blog/c1-time-and-habits-blog.html" Time and Habits</a>
-    <a href="file:///home/dev/workspace/ben-southpaw.github.io/blog/c1-reflection-blog.html" Reflection>
+    <a href="ben-southpaw.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits</a>
+    <a href="file:///home/dev/workspace/ben-southpaw.github.io/blog/c1-reflection-blog.html"> Reflection </a>
       
     </p>
     <p>
