--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3></h3>
     
     <a href="ben-southpaw.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits</a>
-    <a href="file:///home/dev/workspace/ben-southpaw.github.io/blog/c1-reflection-blog.html"> Reflection </a>
+    <a href="ben-southpaw.github.io/blog/c1-reflection-blog.html"> Reflection </a>
       
     </p>
     <p>
