--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <li>
             <a href="ben-southpaw.github.io/blog/c1-reflection-blog.html"> Reflection</a>
       </li>
+      <li>
+            <a href="ben-southpaw.github.io/blog/t2-html-css-dom-p1.html"> Site Wishlist</a>
+
+      </li>
 
   </ol>
     </div>
