--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="ben-southpaw.github.io/blog/c1-reflection-blog.html"> Reflection</a>
       </li>
       <li>
-            <a href="ben-southpaw.github.io/blog/t2-html-css-dom-p1.html"> Site Wishlist</a>
+            <a href="ben-southpaw.github.io/t2-html-css-dom-p1.html"> Site Wishlist</a>
 
       </li>
 
