--- a/t2-html-css-dom-p1.html
+++ b/t2-html-css-dom-p1.html
@@ -43,7 +43,7 @@
   </div>
 
     
-<a class="button button-primary" href="ben-southpaw.github.io">Home</a>
+<a href="ben-southpaw.github.io">Home</a>
 
     <!-- this is a comment. -->
   </div>
