--- a/t2-html-css-dom-p1.html
+++ b/t2-html-css-dom-p1.html
@@ -41,11 +41,13 @@
   <div>
   <p>The Box Model</p>
   </div>
+</div>
+ 
 
-    
-<a href="ben-southpaw.github.io">Home</a>
-
+    <div>     
+      <a href="ben-southpaw.github.io">Home</a>
+    </div>
     <!-- this is a comment. -->
-  </div>
+  
   </body>
 </html>
