--- a/t2-html-css-dom-p1.html
+++ b/t2-html-css-dom-p1.html
@@ -44,10 +44,11 @@
 </div>
  
 
-    <div>     
-      <a href="ben-southpaw.github.io">Home</a>
-    </div>
+   
     <!-- this is a comment. -->
   
   </body>
+   <div>     
+      <a href="/" title="Back to the Home page"><b>HOME</b></a>
+    </div>
 </html>
