--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <body>
   <div class="page-wrapper">
-    <h1> Bens Blog</h1>
+    <h1> Ben's Blog</h1>
     <h2><em>Phase zero of EDA</em></h2>
     
      </div>
