--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <a href="ben-southpaw.github.io/t2-html-css-dom-p1.html"> Site Wishlist</a>
 
       </li>
+      <li>
+            <a href="ben-southpaw.github.io/t2-html-css-dom-p2.html"> More on website structure</a>
+
+      </li>
 
   </ol>
     </div>
