Add link to home page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <a href="ben-southpaw.github.io/t2-html-css-dom-p2.html"> More on website structure</a>
 
       </li>
+      <li>
+            <a href="ben-southpaw.github.io/c2-emotional-intelligence.html"> More on website structure</a>
+
+      </li>
 
   </ol>
     </div>
