--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       </li>
       <li>
-            <a href="ben-southpaw.github.io/c2-emotional-intelligence.html"> More on website structure</a>
+            <a href="ben-southpaw.github.io/c2-emotional-intelligence.html"> Emotional Intelligence Week 2</a>
 
       </li>
 
