--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
 <li><a href="https://github.com/ben-southpaw">My Github</a></li>
 <li><a href="ben-southpaw.github.io/t2-html-css-dom-p1.html">Site Wishlist</a></li>
 <li><a href="ben-southpaw.github.io/t2-html-css-dom-p2.html">More on website structure</a></li>
-<li><a href="#">Wireframe Images</a></li>
+<li><a href="blog/Images">Wireframe Images</a></li>
 </ul>
 <h4>Blog Posts</h4>
 <ul>
 <li><a href="ben-southpaw.github.io/blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
 <li><a href="ben-southpaw.github.io/blog/c1-reflection-blog.html">Reflection Week 1</a></li>
 <li><a href="ben-southpaw.github.io/c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
-<li><a href="#">More on website structure</a></li>
+<li><a href="ben-southpaw.github.io/t3-design-to-web-blog.html">Tech Blog 3</a></li>
+li><a href="ben-southpaw.github.io/c3-meditation-process.html">Meditation Process Week 3</a></li>
 </ul>
 
 
