--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <h4>Links</h4>
 <ul>
 <li><a href="https://github.com/ben-southpaw">My Github</a></li>
-<li><a href="ben-southpaw.github.io/t2-html-css-dom-p1.html">Site Wishlist</a></li>
+<li><a href="https://github.com/ben-southpaw/t2-html-css-dom-p1.html">Site Wishlist</a></li>
 <li><a href="ben-southpaw.github.io/t2-html-css-dom-p2.html">More on website structure</a></li>
 <li><a href="blog/Images">Wireframe Images</a></li>
 </ul>
@@ -62,7 +62,7 @@
 <li><a href="ben-southpaw.github.io/blog/c1-reflection-blog.html">Reflection Week 1</a></li>
 <li><a href="ben-southpaw.github.io/c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
 <li><a href="ben-southpaw.github.io/t3-design-to-web-blog.html">Tech Blog 3</a></li>
-li><a href="ben-southpaw.github.io/c3-meditation-process.html">Meditation Process Week 3</a></li>
+<li><a href="ben-southpaw.github.io/c3-meditation-process.html">Meditation Process Week 3</a></li>
 </ul>
 
 
