Attempt to fix links

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <h4>Links</h4>
 <ul>
 <li><a href="https://github.com/ben-southpaw">My Github</a></li>
-<li><a href="https://github.com/ben-southpaw/t2-html-css-dom-p1.html">Site Wishlist</a></li>
-<li><a href="ben-southpaw.github.io/t2-html-css-dom-p2.html">More on website structure</a></li>
+<li><a href="t2-html-css-dom-p1.html">Site Wishlist</a></li>
+<li><a href="t2-html-css-dom-p2.html">More on website structure</a></li>
 <li><a href="blog/Images">Wireframe Images</a></li>
 </ul>
 <h4>Blog Posts</h4>
