--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 </ul>
 <h4>Blog Posts</h4>
 <ul>
-<li><a href="ben-southpaw.github.io/blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
-<li><a href="ben-southpaw.github.io/blog/c1-reflection-blog.html">Reflection Week 1</a></li>
-<li><a href="ben-southpaw.github.io/c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
-<li><a href="ben-southpaw.github.io/t3-design-to-web-blog.html">Tech Blog 3</a></li>
-<li><a href="ben-southpaw.github.io/c3-meditation-process.html">Meditation Process Week 3</a></li>
+<li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
+<li><a href="blog/c1-reflection-blog.html">Reflection Week 1</a></li>
+<li><a href="c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
+<li><a href="blog/t3-design-to-web-blog.html">Tech Blog 3</a></li>
+<li><a href="blog/c3-meditation-process.html">Meditation Process Week 3</a></li>
 </ul>
 
 
