--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 <h4>Links</h4>
 <ul>
 <li><a href="https://github.com/ben-southpaw">My Github</a></li>
-<li><a href="t2-html-css-dom-p1.html">Site Wishlist</a></li>
-<li><a href="t2-html-css-dom-p2.html">More on website structure</a></li>
+<li><a href="blog/t2-html-css-dom-p1.html">Site Wishlist</a></li>
+<li><a href="blog/t2-html-css-dom-p2.html">More on website structure</a></li>
 </ul>
 <h4>Blog Posts</h4>
 <ul>
 <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
 <li><a href="blog/c1-reflection-blog.html">Reflection Week 1</a></li>
-<li><a href="c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
+<li><a href="blog/c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
 <li><a href="blog/t3-design-to-web-blog.html">Tech Blog 3</a></li>
 <li><a href="blog/c3-meditation-process.html">Meditation Process Week 3</a></li>
 </ul>
