Add week 4 blog post

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 <li><a href="blog/t3-design-to-web-blog.html">Tech Blog 3</a></li>
 <li><a href="blog/c3-meditation-process.html">Meditation Process Week 3</a></li>
 </ul>
+<li><a href="blog/t4-javascript-basics.html">JavaScript Basics Week 4</a></li>
+</ul>
 
 
 </div>
