Add meditation blog 4

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 </ul>
 <li><a href="blog/t4-javascript-basics.html">JavaScript Basics Week 4</a></li>
 </ul>
+<li><a href="blog/c4-daily-mindfulness.html">Mediation Process Week 4</a></li>
+</ul>
 
 
 </div>
