--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <li><a href="blog/t4-javascript-basics.html">JavaScript Basics Week 4</a></li>
 </ul>
 <li><a href="blog/c4-daily-mindfulness.html">Mediation Process Week 4</a></li>
+<li><a href="blog/c5-self-confidence.html">Mediation Process Week 5</a></li>
 
 </ul>
 
