--- a/index.html
+++ b/index.html
@@ -1,96 +1,77 @@
   <!doctype html>
-<html class="no-js" lang="en">
+  <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Ben's Blog of EDA phase zero</title>
+    <title>Ben's Blog of EDA phase zero</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="styles/style.css">
-   
+
   </head>
-<body>
-  <div class="top-bar">
-  <div class="top-bar-left">
-    <ul class="menu">
-      <li class="menu-text">Ben-Southpaw</li>
-    </ul>
+  <body>
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text">Ben-Southpaw</li>
+        </ul>
+      </div>
+
+    </div>
+    <div class="callout large primary">
+      <div class="row column text-center">
+        <h1>Ben's Blog of EDA Phase Zero</h1>
+      </div>
+    </div>
+    <div class="row" id="content" style="height:500px">
+      <div class="medium-12 columns">
+        <div class="blog-post">
+          <h3>Welcome to the homepage <small>3/4/2016</small></h3>
+          <img class="thumbnail" src="http://www.information-age.com/sites/default/files/styles/article_landscape/public/field/image/code.jpg?itok=cYnCFthJ">
+          <p>This page serves to demonstrate the ongoing struggles of one student through phase zero. Here you will find links to the assignments and blogs related to the course. Enjoy your stay!</p>
+          <div class="callout">
+            <ul class="menu simple">
+              <li><a href="#">Author: Ben Dryden</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <div class="medium-3 columns" data-sticky-container="" style="position: absolute;">
+        <div class="sticky" data-sticky="" data-options="marginTop:0;" style="width:100%;">
+
+          <h4>Links</h4>
+          <ul style="list-style-type:none;">
+            <li><a href="https://github.com/ben-southpaw">My Github</a></li>
+            <li><a href="blog/t2-html-css-dom-p1.html">Site Wishlist</a></li>
+            <li><a href="blog/t2-html-css-dom-p2.html">More on website structure</a></li>
+          </ul>
+          <h4>Blog Posts</h4>
+          <ul style="list-style-type:none;">
+            <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
+            <li><a href="blog/c1-reflection-blog.html">Reflection Week 1</a></li>
+            <li><a href="blog/c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
+            <li><a href="blog/t3-design-to-web-blog.html">Tech Blog 3</a></li>
+            <li><a href="blog/c3-meditation-process.html">Meditation Process Week 3</a></li>
+
+            <li><a href="blog/t4-javascript-basics.html">JavaScript Basics Week 4</a></li>
+
+           <li><a href="blog/c4-daily-mindfulness.html">Mediation Process Week 4</a></li>
+           <li><a href="blog/c5-self-confidence.html">Mediation Process Week 5</a></li>
+           <li><a href="blog/t5-problem-solving.html">Problem Solving</a></li>
+ 
+          </ul>
+
+
+      </div>
+    </div>
   </div>
-  <div class="top-bar-right">
-    <ul class="menu">
-      <li><a href="#">.</a></li> 
-      <li><a href="#">.</a></li>
-      <li><a href="#">.</a></li>
-      <li><a href="#">.</a></li>
-    </ul>
-  </div>
-  </div>
-<div class="callout large primary">
-<div class="row column text-center">
-<h1>Ben's Blog of EDA Phase Zero</h1>
-</div>
-</div>
-<div class="row" id="content">
-<div class="medium-12 columns">
-<div class="blog-post">
-<h3>Welcome to the homepage <small>3/4/2016</small></h3>
-  <img class="thumbnail" src="http://www.information-age.com/sites/default/files/styles/article_landscape/public/field/image/code.jpg?itok=cYnCFthJ">
-<p>This page hopes serves to demonstrate the ongoing struggles of one student through phase zero. Here you will find links to the assignments and blogs related to the course. Enjoy your stay!</p>
-<div class="callout">
-<ul class="menu simple">
-<li><a href="#">Author: Ben Dryden</a></li>
-<li><a href="#">Comments: 0</a></li>
-</ul>
-</div>
-</div>
 
-</div>
-<div class="medium-3 columns" data-sticky-container>
-<div class="sticky" data-sticky data-options="marginTop:0;"style"width:100%;"</style> 
-
-<h4>Links</h4>
-<ul>
-<li><a href="https://github.com/ben-southpaw">My Github</a></li>
-<li><a href="blog/t2-html-css-dom-p1.html">Site Wishlist</a></li>
-<li><a href="blog/t2-html-css-dom-p2.html">More on website structure</a></li>
-</ul>
-<h4>Blog Posts</h4>
-<ul>
-<li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
-<li><a href="blog/c1-reflection-blog.html">Reflection Week 1</a></li>
-<li><a href="blog/c2-emotional-intelligence.html">Emotional Intelligence Week 2</a></li>
-<li><a href="blog/t3-design-to-web-blog.html">Tech Blog 3</a></li>
-<li><a href="blog/c3-meditation-process.html">Meditation Process Week 3</a></li>
-</ul>
-<li><a href="blog/t4-javascript-basics.html">JavaScript Basics Week 4</a></li>
-</ul>
-<li><a href="blog/c4-daily-mindfulness.html">Mediation Process Week 4</a></li>
-<li><a href="blog/c5-self-confidence.html">Mediation Process Week 5</a></li>
-
-</ul>
-
-
-</div>
-</div>
-</div>
-<div class="row column">
-<ul class="pagination" role="navigation" aria-label="Pagination">
-<li class="disabled">Previous</li>
-<li class="current"><span class="show-for-sr">You're on page</span> 1</li>
-<li><a href="#" aria-label="Page 2">2</a></li>
-<li><a href="#" aria-label="Page 3">3</a></li>
-<li><a href="#" aria-label="Page 4">4</a></li>
-<li class="ellipsis"></li>
-<li><a href="#" aria-label="Page 12">12</a></li>
-<li><a href="#" aria-label="Page 13">13</a></li>
-<li><a href="#" aria-label="Next page">Next</a></li>
-</ul>
-</div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
 <script>
-$(document).foundation();
+  //$(document).foundation();
 </script>
 </body>
 </html>
