Adding final file updates

--- a/javascript-racer.html
+++ b/javascript-racer.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="javascript-racer.css">
-  <script type="text/javascript" src="javascript-racer.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/javascript-racer.css">
+  <script type="text/javascript" src="script/javascript-racer.js" async></script>
 </head>
 <body>
 <div class="container">
   <table class="racer_table">
   <tbody>
-    <tr id="player1_strip"> //Build grid and add images. Add Racer figure.//
+    <tr id="player1_strip"> 
       <td class="active"></td>
         <td class></td>
         <td class></td>
