--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="row" id="content" style="height:500px">
       <div class="medium-12 columns">
         <div class="blog-post">
-          <h3>Welcome to the homepage <small>3/4/2016</small></h3>
+          <h3>Welcome to the homepage</h3>
           <img class="thumbnail" src="http://www.information-age.com/sites/default/files/styles/article_landscape/public/field/image/code.jpg?itok=cYnCFthJ">
           <p>This page serves to demonstrate the ongoing struggles of one student through phase zero. Here you will find links to the assignments and blogs related to the course. Enjoy your stay!</p>
           <div class="callout">
@@ -46,6 +46,7 @@
             <li><a href="https://github.com/ben-southpaw">My Github</a></li>
             <li><a href="blog/t2-html-css-dom-p1.html">Site Wishlist</a></li>
             <li><a href="blog/t2-html-css-dom-p2.html">More on website structure</a></li>
+            <li><a href="javascript-racer/javascript-racer.html">Racer Game</a></li>
           </ul>
           <h4>Blog Posts</h4>
           <ul style="list-style-type:none;">
