--- a/javascript-racer/javascript-racer.html
+++ b/javascript-racer/javascript-racer.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="styles/javascript-racer.css">
-  <script type="text/javascript" src="script/javascript-racer.js" async></script>
+  <link rel="stylesheet" type="text/css" href="javascript-racer.css">
+  <script type="text/javascript" src="javascript-racer.js" async></script>
 </head>
 <body>
 <div class="container">
